<?xml version="1.0"?>
<package>
  <name>demo_driver</name>
  <version>1.0.0</version>
  <description>The demo_driver package for robot status interface</description>

  <maintainer email="user@example.com">User</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>demo_interface</build_depend>
  <build_depend>aubo_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>industrial_msgs</run_depend>
  <run_depend>demo_interface</run_depend>
  <run_depend>aubo_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_ros_planning_interface</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

  <export>
  </export>
</package>

