<?xml version="1.0"?>
<package>
  <name>demo_interface</name>
  <version>1.0.0</version>
  <description>The demo_interface package for robot status messages</description>

  <maintainer email="user@example.com">User</maintainer>
 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>

  <export>
  </export>
</package>

